# role-homebrew-retry

./: LICENSE  README.md  patch  pyproject.toml  requirements.yml
.cookiecutter/: cookiecutter.json
.github/markdown/: ISSUE_TEMPLATE.md
.github/scripts/: build.sh  setup.sh
.github/workflows/: push.yml  release.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/base_only/: verify.yml
molecule/common/tasks/: setup.yml
molecule/default/: molecule.yml
molecule/docker1/: converge.yml
molecule/one_of_each/: converge.yml  verify.yml
molecule/one_of_each/vars/: main.yml
molecule/taps_only/: converge.yml  verify.yml
molecule/targeted_only/: verify.yml
tasks/: 01_base.yml  02_user_casks.yml  03_targeted_casks.yml  main.yml
tests/: test.yml
vars/: main.yml
