
[build-system]
  build-backend = "poetry.core.masonry.api"
  requires = ["poetry-core>=1.0.0"]

[tool]

  [tool.poetry]
    authors = ["Niall Byrne <niall@niallbyrne.ca>"]
    description = "Encapsulates geerlingguy.homebrew in a simple retry loop, to allow for connectivity errors during homebrew installs."
    name = "role-homebrew-retry"
    version = "0.3.0"

    [tool.poetry.dependencies]
      python = ">=3.8.0,<4.0"

    [tool.poetry.dev-dependencies]
      ansible = "^5.2.0"
      ansible-compat = "!=2.1.0"
      ansible-lint = "^5.3.2"
      commitizen = "^2.20.4"
      yamllint = "^1.26.3"

      [tool.poetry.dev-dependencies.molecule]
        extras = ["docker"]
        version = "^3.5.2"
